# dx

./: .gitignore  Cargo.toml  Makefile  README.md
CLAUDE_TODO/: NEXT_PROMPT.md  NEXT_PROMPT_51.md
compiler/: README.md
crates/dx-llvm-ir/: Cargo.toml
crates/dx-llvm-ir/src/: emit.rs  exec.rs  lib.rs  link.rs  pipeline.rs  toolchain.rs
crates/dx-llvm-ir/tests/: build_exec_integration.rs  cli_workflow.rs  demo_fixtures.rs  emit_coverage.rs  run_exec_integration.rs  schema_package_validation.rs  toolchain_harness.rs
crates/dx-schema/: Cargo.toml
crates/dx-schema/src/: lib.rs
crates/dx-schema/tests/: cli_pipeline.rs
docs/: CLAUDE_TASK_01_LEXER_AND_TOKENS.md  CLAUDE_TASK_02_PARSER_CONTROL_FLOW.md  CLAUDE_TASK_03_PARSER_MATCH_AND_IMPORTS.md  DX_AD_PPL_DIRECTION.md  DX_AD_PRIMITIVE_PROVIDER_PLAN.md  DX_CLOSURE_CALL_ABI_PLAN.md  DX_CLOSURE_CALL_ARITY_PLAN.md  DX_CLOSURE_DISPATCH_PLAN.md  DX_CLOSURE_RUNTIME_PLAN.md  DX_COMPILETIME_PROVIDERS_PLAN.md  DX_CORE_FEATURES_v0_ALPHA.md  DX_DESIGN_CRITIQUE.md  DX_ERROR_MODEL.md  DX_EXECUTABLE_DEMOS.md  DX_EXECUTABLE_ENTRYPOINT_PLAN.md  DX_EXECUTION_WORKFLOW.md  DX_FOUNDATIONS_PAPER_TRAIL.md  DX_HIR_PLAN.md  DX_IMPLEMENTATION_ROADMAP.md  DX_LANGUAGE_VISION.md  DX_LAYER_TARGET_DEMOS.md  DX_LLVM_LOWERING_PLAN.md  DX_LLVM_SKELETON_PLAN.md  DX_LLVM_TOOLCHAIN_PLAN.md  DX_LONG_TERM_ROADMAP.md  DX_MATCH_LOWERING_PLAN.md  DX_MATCH_RUNTIME_PLAN.md  DX_MEMORY_MODEL_IMPLEMENTATION_PLAN.md  DX_MEMORY_MODEL_PLAN.md  DX_PARSER_MILESTONE.md  DX_PROVIDER_ARTIFACTS_REFERENCE.md  DX_PROVIDER_CONSTRAINTS.md  DX_REAL_LLVM_BACKEND_PLAN.md  (+13 more)
(+167 files in other folders)
